AUTOMAKE_OPTS = gnu

nobase_opbxsounds_DATA =  allison-en/agent-alreadyon.gsm \
allison-en/agent-incorrect.gsm \
allison-en/agent-loggedoff.gsm \
allison-en/agent-loginok.gsm \
allison-en/agent-newlocation.gsm \
allison-en/agent-pass.gsm \
allison-en/agent-user.gsm \
allison-en/auth-incorrect.gsm \
allison-en/auth-thankyou.gsm \
allison-en/beep.gsm \
allison-en/beeperr.gsm \
allison-en/conf-adminmenu.gsm \
allison-en/conf-enteringno.gsm \
allison-en/conf-errormenu.gsm \
allison-en/conf-getchannel.gsm \
allison-en/conf-getconfno.gsm \
allison-en/conf-getpin.gsm \
allison-en/conf-hasjoin.gsm \
allison-en/conf-hasleft.gsm \
allison-en/conf-invalid.gsm \
allison-en/conf-invalidpin.gsm \
allison-en/conf-kicked.gsm \
allison-en/conf-leaderhasleft.gsm \
allison-en/conf-locked.gsm \
allison-en/conf-lockednow.gsm \
allison-en/conf-muted.gsm \
allison-en/conf-noempty.gsm \
allison-en/conf-onlyone.gsm \
allison-en/conf-onlyperson.gsm \
allison-en/conf-otherinparty.gsm \
allison-en/conf-placeintoconf.gsm \
allison-en/conf-thereare.gsm \
allison-en/conf-unlockednow.gsm \
allison-en/conf-unmuted.gsm \
allison-en/conf-usermenu.gsm \
allison-en/conf-userswilljoin.gsm \
allison-en/conf-userwilljoin.gsm \
allison-en/conf-waitforleader.gsm \
allison-en/demo-abouttotry.gsm \
allison-en/demo-congrats.gsm \
allison-en/demo-echodone.gsm \
allison-en/demo-echotest.gsm \
allison-en/demo-enterkeywords.gsm \
allison-en/demo-instruct.gsm \
allison-en/demo-moreinfo.gsm \
allison-en/demo-nogo.gsm \
allison-en/demo-nomatch.gsm \
allison-en/demo-thanks.gsm \
allison-en/dir-instr.gsm \
allison-en/dir-intro-fn.gsm \
allison-en/dir-intro.gsm \
allison-en/dir-nomatch.gsm \
allison-en/dir-nomore.gsm \
allison-en/hours.gsm \
allison-en/invalid.gsm \
allison-en/minutes.gsm \
allison-en/pbx-invalid.gsm \
allison-en/pbx-invalidpark.gsm \
allison-en/pbx-transfer.gsm \
allison-en/priv-callee-options.gsm \
allison-en/priv-callpending.gsm \
allison-en/priv-introsaved.gsm \
allison-en/priv-recordintro.gsm \
allison-en/privacy-incorrect.gsm \
allison-en/privacy-prompt.gsm \
allison-en/privacy-thankyou.gsm \
allison-en/privacy-unident.gsm \
allison-en/queue-callswaiting.gsm \
allison-en/queue-holdtime.gsm \
allison-en/queue-less-than.gsm \
allison-en/queue-minutes.gsm \
allison-en/queue-periodic-announce.gsm \
allison-en/queue-reporthold.gsm \
allison-en/queue-seconds.gsm \
allison-en/queue-thankyou.gsm \
allison-en/queue-thereare.gsm \
allison-en/queue-youarenext.gsm \
allison-en/screen-callee-options.gsm \
allison-en/seconds.gsm \
allison-en/spy-agent.gsm \
allison-en/spy-h323.gsm \
allison-en/spy-iax.gsm \
allison-en/spy-iax2.gsm \
allison-en/spy-mgcp.gsm \
allison-en/spy-sip.gsm \
allison-en/spy-skinny.gsm \
allison-en/spy-zap.gsm \
allison-en/ss-noservice.gsm \
allison-en/transfer.gsm \
allison-en/tt-allbusy.gsm \
allison-en/tt-monkeys.gsm \
allison-en/tt-monkeysintro.gsm \
allison-en/tt-somethingwrong.gsm \
allison-en/tt-weasels.gsm \
allison-en/vm-Cust1.gsm \
allison-en/vm-Cust2.gsm \
allison-en/vm-Cust3.gsm \
allison-en/vm-Cust4.gsm \
allison-en/vm-Cust5.gsm \
allison-en/vm-Family.gsm \
allison-en/vm-Friends.gsm \
allison-en/vm-INBOX.gsm \
allison-en/vm-Old.gsm \
allison-en/vm-Work.gsm \
allison-en/vm-advopts.gsm \
allison-en/vm-and.gsm \
allison-en/vm-calldiffnum.gsm \
allison-en/vm-changeto.gsm \
allison-en/vm-delete.gsm \
allison-en/vm-deleted.gsm \
allison-en/vm-dialout.gsm \
allison-en/vm-enter-num-to-call.gsm \
allison-en/vm-extension.gsm \
allison-en/vm-first.gsm \
allison-en/vm-for.gsm \
allison-en/vm-forward.gsm \
allison-en/vm-forwardoptions.gsm \
allison-en/vm-from-extension.gsm \
allison-en/vm-from-phonenumber.gsm \
allison-en/vm-from.gsm \
allison-en/vm-goodbye.gsm \
allison-en/vm-helpexit.gsm \
allison-en/vm-incorrect-mailbox.gsm \
allison-en/vm-incorrect.gsm \
allison-en/vm-instructions.gsm \
allison-en/vm-intro.gsm \
allison-en/vm-isonphone.gsm \
allison-en/vm-isunavail.gsm \
allison-en/vm-last.gsm \
allison-en/vm-leavemsg.gsm \
allison-en/vm-login.gsm \
allison-en/vm-mailboxfull.gsm \
allison-en/vm-message.gsm \
allison-en/vm-messages.gsm \
allison-en/vm-minutes.gsm \
allison-en/vm-mismatch.gsm \
allison-en/vm-msginstruct.gsm \
allison-en/vm-msgsaved.gsm \
allison-en/vm-newpassword.gsm \
allison-en/vm-newuser.gsm \
allison-en/vm-next.gsm \
allison-en/vm-no.gsm \
allison-en/vm-nobodyavail.gsm \
allison-en/vm-nobox.gsm \
allison-en/vm-nomore.gsm \
allison-en/vm-nonumber.gsm \
allison-en/vm-num-i-have.gsm \
allison-en/vm-onefor.gsm \
allison-en/vm-options.gsm \
allison-en/vm-opts.gsm \
allison-en/vm-passchanged.gsm \
allison-en/vm-password.gsm \
allison-en/vm-press.gsm \
allison-en/vm-prev.gsm \
allison-en/vm-reachoper.gsm \
allison-en/vm-rec-busy.gsm \
allison-en/vm-rec-name.gsm \
allison-en/vm-rec-temp.gsm \
allison-en/vm-rec-unv.gsm \
allison-en/vm-received.gsm \
allison-en/vm-reenterpassword.gsm \
allison-en/vm-repeat.gsm \
allison-en/vm-review.gsm \
allison-en/vm-saved.gsm \
allison-en/vm-savedto.gsm \
allison-en/vm-savefolder.gsm \
allison-en/vm-savemessage.gsm \
allison-en/vm-saveoper.gsm \
allison-en/vm-sorry.gsm \
allison-en/vm-star-cancel.gsm \
allison-en/vm-starmain.gsm \
allison-en/vm-tempgreeting.gsm \
allison-en/vm-tempgreeting2.gsm \
allison-en/vm-tempremoved.gsm \
allison-en/vm-then-pound.gsm \
allison-en/vm-theperson.gsm \
allison-en/vm-tocallback.gsm \
allison-en/vm-tocallnum.gsm \
allison-en/vm-tocancel.gsm \
allison-en/vm-tocancelmsg.gsm \
allison-en/vm-toenternumber.gsm \
allison-en/vm-toforward.gsm \
allison-en/vm-tohearenv.gsm \
allison-en/vm-tomakecall.gsm \
allison-en/vm-tooshort.gsm \
allison-en/vm-toreply.gsm \
allison-en/vm-torerecord.gsm \
allison-en/vm-undelete.gsm \
allison-en/vm-undeleted.gsm \
allison-en/vm-unknown-caller.gsm \
allison-en/vm-whichbox.gsm \
allison-en/vm-youhave.gsm \
allison-en/dictate/both_help.gsm \
allison-en/dictate/enter_filename.gsm \
allison-en/dictate/forhelp.gsm \
allison-en/dictate/pause.gsm \
allison-en/dictate/paused.gsm \
allison-en/dictate/play_help.gsm \
allison-en/dictate/playback.gsm \
allison-en/dictate/playback_mode.gsm \
allison-en/dictate/record.gsm \
allison-en/dictate/record_help.gsm \
allison-en/dictate/record_mode.gsm \
allison-en/dictate/truncating_audio.gsm \
allison-en/letters/a.gsm \
allison-en/letters/at.gsm \
allison-en/letters/b.gsm \
allison-en/letters/c.gsm \
allison-en/letters/d.gsm \
allison-en/letters/dash.gsm \
allison-en/letters/dollar.gsm \
allison-en/letters/dot.gsm \
allison-en/letters/e.gsm \
allison-en/letters/equals.gsm \
allison-en/letters/exclaimation-point.gsm \
allison-en/letters/f.gsm \
allison-en/letters/g.gsm \
allison-en/letters/h.gsm \
allison-en/letters/i.gsm \
allison-en/letters/j.gsm \
allison-en/letters/k.gsm \
allison-en/letters/l.gsm \
allison-en/letters/m.gsm \
allison-en/letters/n.gsm \
allison-en/letters/o.gsm \
allison-en/letters/p.gsm \
allison-en/letters/plus.gsm \
allison-en/letters/q.gsm \
allison-en/letters/r.gsm \
allison-en/letters/s.gsm \
allison-en/letters/slash.gsm \
allison-en/letters/space.gsm \
allison-en/letters/t.gsm \
allison-en/letters/u.gsm \
allison-en/letters/v.gsm \
allison-en/letters/w.gsm \
allison-en/letters/x.gsm \
allison-en/letters/y.gsm \
allison-en/letters/z.gsm \
allison-en/letters/zed.gsm \
allison-en/digits/0.gsm \
allison-en/digits/1.gsm \
allison-en/digits/10.gsm \
allison-en/digits/11.gsm \
allison-en/digits/12.gsm \
allison-en/digits/13.gsm \
allison-en/digits/14.gsm \
allison-en/digits/15.gsm \
allison-en/digits/16.gsm \
allison-en/digits/17.gsm \
allison-en/digits/18.gsm \
allison-en/digits/19.gsm \
allison-en/digits/2.gsm \
allison-en/digits/20.gsm \
allison-en/digits/3.gsm \
allison-en/digits/30.gsm \
allison-en/digits/4.gsm \
allison-en/digits/40.gsm \
allison-en/digits/5.gsm \
allison-en/digits/50.gsm \
allison-en/digits/6.gsm \
allison-en/digits/60.gsm \
allison-en/digits/7.gsm \
allison-en/digits/70.gsm \
allison-en/digits/8.gsm \
allison-en/digits/80.gsm \
allison-en/digits/9.gsm \
allison-en/digits/90.gsm \
allison-en/digits/a-m.gsm \
allison-en/digits/at.gsm \
allison-en/digits/day-0.gsm \
allison-en/digits/day-1.gsm \
allison-en/digits/day-2.gsm \
allison-en/digits/day-3.gsm \
allison-en/digits/day-4.gsm \
allison-en/digits/day-5.gsm \
allison-en/digits/day-6.gsm \
allison-en/digits/dollars.gsm \
allison-en/digits/h-1.gsm \
allison-en/digits/h-10.gsm \
allison-en/digits/h-11.gsm \
allison-en/digits/h-12.gsm \
allison-en/digits/h-13.gsm \
allison-en/digits/h-14.gsm \
allison-en/digits/h-15.gsm \
allison-en/digits/h-16.gsm \
allison-en/digits/h-17.gsm \
allison-en/digits/h-18.gsm \
allison-en/digits/h-19.gsm \
allison-en/digits/h-2.gsm \
allison-en/digits/h-20.gsm \
allison-en/digits/h-3.gsm \
allison-en/digits/h-30.gsm \
allison-en/digits/h-4.gsm \
allison-en/digits/h-5.gsm \
allison-en/digits/h-6.gsm \
allison-en/digits/h-7.gsm \
allison-en/digits/h-8.gsm \
allison-en/digits/h-9.gsm \
allison-en/digits/hundred.gsm \
allison-en/digits/million.gsm \
allison-en/digits/minus.gsm \
allison-en/digits/mon-0.gsm \
allison-en/digits/mon-1.gsm \
allison-en/digits/mon-10.gsm \
allison-en/digits/mon-11.gsm \
allison-en/digits/mon-2.gsm \
allison-en/digits/mon-3.gsm \
allison-en/digits/mon-4.gsm \
allison-en/digits/mon-5.gsm \
allison-en/digits/mon-6.gsm \
allison-en/digits/mon-7.gsm \
allison-en/digits/mon-8.gsm \
allison-en/digits/mon-9.gsm \
allison-en/digits/oclock.gsm \
allison-en/digits/oh.gsm \
allison-en/digits/p-m.gsm \
allison-en/digits/pound.gsm \
allison-en/digits/star.gsm \
allison-en/digits/thousand.gsm \
allison-en/digits/today.gsm \
allison-en/digits/tomorrow.gsm \
allison-en/digits/yesterday.gsm \
allison-en/phonetic/9_p.gsm \
allison-en/phonetic/a_p.gsm \
allison-en/phonetic/b_p.gsm \
allison-en/phonetic/c_p.gsm \
allison-en/phonetic/d_p.gsm \
allison-en/phonetic/e_p.gsm \
allison-en/phonetic/f_p.gsm \
allison-en/phonetic/g_p.gsm \
allison-en/phonetic/h_p.gsm \
allison-en/phonetic/i_p.gsm \
allison-en/phonetic/j_p.gsm \
allison-en/phonetic/k_p.gsm \
allison-en/phonetic/l_p.gsm \
allison-en/phonetic/m_p.gsm \
allison-en/phonetic/n_p.gsm \
allison-en/phonetic/o_p.gsm \
allison-en/phonetic/p_p.gsm \
allison-en/phonetic/q_p.gsm \
allison-en/phonetic/r_p.gsm \
allison-en/phonetic/s_p.gsm \
allison-en/phonetic/t_p.gsm \
allison-en/phonetic/u_p.gsm \
allison-en/phonetic/v_p.gsm \
allison-en/phonetic/w_p.gsm \
allison-en/phonetic/x_p.gsm \
allison-en/phonetic/y_p.gsm \
allison-en/phonetic/z_p.gsm

install-data-hook:
	ln -s allison-en $(DESTDIR)$(opbxsoundsdir)/en
